# liter-llm

./: .gitignore  .lychee.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml  _typos.toml  alef.toml  composer.json  llms.txt  mkdocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skif.toml  tsconfig.json  zensical.toml
.ai-rulez/: config.toml  config.yaml
.ai-rulez/context/: project-overview.md
.ai-rulez/rules/: code-quality.md  provider-architecture.md  schema-driven-types.md  secrets-and-api-keys.md  streaming-and-async.md
.cargo/: config.toml
.github/: dependabot.yaml
.github/workflows/: ci-c-ffi.yaml  ci-csharp.yaml  ci-docker.yaml  ci-docs.yaml  ci-elixir.yaml  ci-go.yaml  ci-java.yaml  ci-node.yaml  ci-php.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust.yaml  ci-validate.yaml  ci-wasm.yaml  ci.yaml  docs.yaml  pr-title.yaml  publish-docker.yaml  publish.yaml
.task/languages/: c.yml  csharp.yml  elixir.yml  go.yml  java.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml  wasm.yml
.task/tools/: docs.yml  general.yml  test-apps.yml
.task/workflows/: e2e.yml  lint.yml  snippets.yml
crates/liter-llm/: Cargo.toml  README.md
crates/liter-llm-bindings-core/: Cargo.toml
crates/liter-llm-cli/: Cargo.toml
crates/liter-llm-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  liter_llm.h
crates/liter-llm-ffi/include/: liter_llm.h
crates/liter-llm-ffi/src/: lib.rs
crates/liter-llm-node/: Cargo.toml  README.md  index.d.ts  package.json
crates/liter-llm-node/npm/darwin-arm64/: README.md  package.json
crates/liter-llm-node/npm/linux-arm64-gnu/: README.md  package.json
crates/liter-llm-node/npm/linux-x64-gnu/: README.md  package.json
crates/liter-llm-node/npm/win32-x64-msvc/: README.md  package.json
crates/liter-llm-node/src/: lib.rs
crates/liter-llm-php/: Cargo.toml
crates/liter-llm-php/src/: lib.rs
crates/liter-llm-proxy/: Cargo.toml
crates/liter-llm-py/: Cargo.toml
crates/liter-llm-wasm/: Cargo.toml  README.md  package.json
crates/liter-llm-wasm/src/: lib.rs
crates/liter-lm/: Cargo.toml
crates/liter-lm-ffi/: Cargo.toml  build.rs  cbindgen.toml  liter_lm.h
crates/liter-lm-ffi/src/: lib.rs
crates/liter-lm-node/: Cargo.toml
crates/liter-lm-node/src/: lib.rs
crates/liter-lm-php/: Cargo.toml
crates/liter-lm-py/: Cargo.toml
crates/liter-lm-wasm/: Cargo.toml
crates/liter-lm-wasm/src/: lib.rs
crates/liter-lm/src/: error.rs  lib.rs  tests.rs
crates/liter-lm/src/client/: config.rs  mod.rs
crates/liter-lm/src/http/: eventstream.rs  request.rs  streaming.rs
crates/liter-lm/src/provider/: anthropic.rs  azure.rs  bedrock.rs  cohere.rs  mistral.rs  mod.rs  vertex.rs
crates/liter-lm/src/tower/: cache.rs  cooldown.rs  cost.rs  fallback.rs  mod.rs  router.rs  service.rs  tests.rs  tracing.rs  types.rs
crates/liter-lm/src/types/: chat.rs  common.rs  embedding.rs
crates/liter-lm/tests/: contract.rs
docker/: Dockerfile
docs/: CHANGELOG.md  contributing.md  index.md  providers.md
docs/api/: api-c.md  api-csharp.md  api-php.md  api-ruby.md  api-typescript.md  c-ffi.md  csharp.md  elixir.md  go.md  java.md  php.md  python.md  ruby.md  rust.md  typescript.md  wasm.md
docs/concepts/: architecture.md  cost-estimation.md  feature-flags.md  providers.md  streaming.md  tokenizer.md
docs/css/: extra.css
docs/getting-started/: installation.md  quickstart.md
docs/guides/: chat.md  cli.md  configuration.md  embeddings.md  streaming.md
docs/overrides/: main.html
docs/reference/: api-c.md  api-csharp.md  api-elixir.md  api-go.md  api-java.md  api-php.md  api-python.md  api-ruby.md  api-rust.md  api-typescript.md  api-wasm.md  configuration.md  errors.md  types.md
docs/server/: mcp-server.md  proxy-configuration.md  proxy-server.md
docs/usage/: authentication.md  chat.md  configuration.md  embeddings.md  error-handling.md  fallback-routing.md  files.md  local-llms.md  mcp-integration.md  media.md  observability.md  search-ocr.md
e2e/brew/: run_tests.sh  test_batches.sh  test_cache.sh  test_chat.sh  test_configuration.sh  test_contract.sh  test_custom_provider.sh  test_embed.sh  test_error_handling.sh  test_files.sh  test_image_generate.sh  test_list_models.sh  test_moderate.sh  test_ocr.sh  test_parity.sh  test_proxy.sh  test_rerank.sh  test_responses.sh  test_search.sh  test_smoke.sh  test_speech.sh  test_streaming.sh  test_tool_calling.sh  test_transcribe.sh  test_types.sh
e2e/c/: Makefile  download_ffi.sh  helpers.c  helpers.h  main.c  test_batches.c  test_budget.c  test_cache.c  test_chat.c  test_configuration.c  test_contract.c  test_custom_provider.c  test_embed.c  test_error_handling.c  test_files.c  test_hooks.c  test_image_generate.c  test_list_models.c  test_moderate.c  test_ocr.c  test_parity.c  test_proxy.c  test_rerank.c  test_responses.c  test_runner.h  test_search.c  test_smoke.c  test_speech.c  test_streaming.c  test_tool_calling.c  test_transcribe.c  test_types.c
e2e/csharp/: BatchesTests.cs  BudgetTests.cs  CacheTests.cs  CustomProviderTests.cs  ErrorHandlingTests.cs  FilesTests.cs  Helpers.cs  HooksTests.cs  ImageGenerateTests.cs  LiterLlm.E2eTests.csproj  LiterLmE2E.csproj  ModerateTests.cs  RerankTests.cs  ResponsesTests.cs  SmokeTests.cs  SpeechTests.cs  StreamingTests.cs  ToolCallingTests.cs  TranscribeTests.cs
e2e/dart/: pubspec.yaml
e2e/elixir/: mix.exs
e2e/gleam/: gleam.toml
e2e/go/: batches_test.go  budget_test.go  cache_test.go  chat_test.go  configuration_test.go  contract_test.go  custom_provider_test.go  embed_test.go  error_handling_test.go  files_test.go  go.mod  hooks_test.go  main_test.go  (+15 more)
fixtures/: schema.json
schemas/: pricing.json  providers.json
scripts/: generate_pricing.py  readme_config.yaml  sync_versions.py
tests/test_apps/python/: main.py  pyproject.toml
tools/e2e-generator/: Cargo.toml
tools/e2e-generator/src/: fixture.rs  main.rs
tools/e2e-generator/src/generators/: c.rs  csharp.rs  elixir.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs  wasm.rs
(+1060 files in other folders)
