[package]
name = "liter-llm-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "C FFI bindings for liter-llm — universal LLM API client with 142+ providers. Rust-powered."
keywords = ["ffi", "bindings", "llm", "api-client", "ai"]
categories = ["development-tools::ffi", "api-bindings"]

[package.metadata.cargo-machete]
ignored = [
    "liter-llm-bindings-core",
    "futures-core",
    "serde",
    "serde_json",
    "tokio",
    "js-sys",
    "serde-wasm-bindgen",
    "wasm-bindgen-futures",
    "base64",
    "bytes",
]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

[dependencies]
base64.workspace = true
bytes.workspace = true
futures-core.workspace = true
liter-llm = { path = "../liter-llm", version = "1.1.1", features = ["full"] }
liter-llm-bindings-core = { path = "../liter-llm-bindings-core", version = "1.1.1" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
cbindgen = "0.29"
