[package]
name = "liter-llm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for liter-llm universal LM API client"
keywords = ["wasm", "webassembly", "llm", "api-client", "bindings"]
categories = ["api-bindings", "wasm"]

[package.metadata.cargo-machete]
ignored = ["liter-llm", "web-sys"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
js-sys = "0.3"
liter-llm = { path = "../liter-llm", default-features = false }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "ReadableStream",
] }

[dev-dependencies]
