[package]
name = "liter-lm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "WebAssembly bindings for liter-lm universal LM API client"
keywords = ["wasm", "webassembly", "llm", "api-client", "bindings"]
categories = ["api-bindings", "wasm"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
