[package]
name = "liter-lm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "A universal LM API client — fast, type-safe, compiled"
keywords = ["llm", "openai", "api-client", "ai", "kreuzberg"]

[features]
# Enable the native HTTP stack (reqwest + tokio).  Disable this feature when
# compiling for WebAssembly, where the browser / Node.js fetch API is used
# instead and the tokio multi-thread runtime is unavailable.
native-http = ["dep:reqwest", "dep:tokio", "dep:memchr", "dep:bytes"]
# Structured tracing via the `tracing` crate.  Adds `#[instrument]` spans on
# HTTP functions and SSE parser warnings.  Can be enabled independently of the
# Tower middleware integration.
tracing = ["dep:tracing"]
# Tower middleware integration (LlmService, TracingLayer, FallbackLayer).
tower = ["dep:tower-layer", "dep:tower-service", "tracing"]
# OpenTelemetry export bridge via `tracing-opentelemetry`.  Depends on `tracing`
# and re-exports `tracing_opentelemetry` so callers can compose their own
# subscriber stack without a hard dependency on the crate themselves.
otel = ["tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]
# Full feature set: native HTTP + tower + tracing + otel.
full = ["native-http", "tower", "tracing", "otel"]
default = ["native-http"]

[dependencies]
bytes = { workspace = true, optional = true }
futures-core = { workspace = true }
memchr = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
pin-project-lite = { workspace = true }
reqwest = { workspace = true, optional = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"], optional = true }
tower-layer = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
jsonschema = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
